err/djig.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djig'...
Listing './lib/python3.5/site-packages/djig/management'...
Listing './lib/python3.5/site-packages/djig/management/commands'...
Listing './lib/python3.5/site-packages/djig/migrations'...
Compiling './lib/python3.5/site-packages/djig/models.py'...
***   File "./lib/python3.5/site-packages/djig/models.py", line 69
    print "%s -- %s -- %s" % (self.calculated_score, hour_age, self.title)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djig/templates'...
Listing './lib/python3.5/site-packages/djig/templates/djig'...
Listing './lib/python3.5/site-packages/djig/templates/search'...
Listing './lib/python3.5/site-packages/djig/templates/search/indexes'...
Listing './lib/python3.5/site-packages/djig/templates/search/indexes/djig'...
Compiling './lib/python3.5/site-packages/djig/views.py'...
***   File "./lib/python3.5/site-packages/djig/views.py", line 145
    print redirect_var
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djig-0.0.1a33.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
